--- a/AnovaTask.API/appsettings.json
+++ b/AnovaTask.API/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:8080"
+      }
+    }
+  },
+  "ConnectionStrings": {
+    "Postgres": "postgres://postgres:SomeHa!dPas1wod@db/test_db"
+  }
 }
