[add] connection to the docker db

--- a/AnovaTask.API/appsettings.json
+++ b/AnovaTask.API/appsettings.json
@@ -14,6 +14,6 @@
     }
   },
   "ConnectionStrings": {
-    "Postgres": "postgres://postgres:SomeHa!dPas1wod@db/test_db"
+    "Postgres": "Server=db;Port=5432;Database=anova_db;Username=postgres;Password=SomeHa!dPas1wod;"
   }
 }
